  a mutex.
  (Simon Cruanes, review by Gabriel Scherer, Xavier Leroy,
   Guillaume Munch-Maccagnoni)

- #11581: Add type equality witness `type (_, _) eq = Equal: ('a, 'a) eq` in a
  new module Stdlib.Type.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Jacques Garrigue, Florian
  Angeletti, Alain Frisch, Gabriel Scherer, Jeremy Yallop and Xavier Leroy)

- #11830: Add Type.Id
  (Daniel Bünzli, review by Jeremy Yallop, Gabriel Scherer, Wiktor Kuchta,
   Nicolás Ojeda Bär)

- #11843: Add `In_channel.input_lines` and `In_channel.fold_lines`.
  (Xavier Leroy, review by Nicolás Ojeda Bär and Wiktor Kuchta).

- #11892: Document the semantic differences of Unix.exec* between Unix and
  Windows.
  (Boris Yakobowski, review by Daniel Bünzli, Gabriel Scherer and Nicolás Ojeda
  Bär)

### Other libraries:

- #11374: Remove pointer cast to a type with stricter alignment requirements
  in Windows implementation of Unix.gettimeofday. Windows implementations of
  caml_unix_map_file, caml_unix_lseek and caml_unix_lseek_64 now release the
  runtime lock. Windows implementation of caml_unix_lockf modernised and
  simplified. Where possible, 64 bit integers are used instead of LARGE_INTEGER
  structs.
  (David Allsopp, review by Jonah Beckford and Xavier Leroy)

- #11475: Make Unix terminal interface bindings domain-safe
  (Olivier Nicole and Xavier Leroy, review by Xavier Leroy)

- #11775: Unix.write on a non-blocking socket under Windows will return normally
  if the write blocks after some data has already been written (as otherwise
  there is no way of knowing how much data has been written before
  blocking). The same behaviour was already present under Unix.
  (Nicolás Ojeda Bär, review by David Allsopp)

### Tools:

- #1172: fix ocamlyacc's handling of raw string literals
  (Demi Marie Obenour)

- #9290: Add a directive to switch off debugging in toplevel.
  This allows to see optimized bytecode with -dlambda.
  (Jacques Garrigue, review by Gabriel Scherer)
